# FACECHECK

./: .gitignore  Makefile.mak  pyproject.toml  requirements.txt
app/: api_fastapi.py  ui_streamlit.py
assets/: qt_profiles.json
configs/: threshold.yml  train.yml
src/: train.py
src/calibration/: reliability.py  temperature.py
src/cli/: main.py
src/datasets/: augment.py  builder.py
src/eval/: evaluate.py
src/explain/: fft_viz.py  gradcam.py
src/forensics/: exif_qtables.py  features.py
src/heuristics/: edges.py
src/models/: backbone_rgb.py  fft_head.py  fusion.py
src/preprocess/: face_align.py
src/report/: make_pdf.py
src/robust/: robust_sweeps.py
src/utils/: io.py  logging.py  timing.py
tests/: conftest.py  test_face_align.py  test_imports.py
