[project]
name = "fakecheck"
version = "0.1.0"
description = "Explainable deepfake headshot detector (scaffold)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "B"]
ignore = []
